--- a/index.html
+++ b/index.html
@@ -7,16 +7,19 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Poppins:wght@700;800&display=swap" rel="stylesheet">
   </head>
   <body class="bg-light-bg text-dark-bg dark:bg-dark-bg dark:text-white transition-colors duration-300">
-    
-    <nav class="p-5 flex justify-between items-center bg-white/10 backdrop-blur-md sticky top-0 z-50">
-      <div class="text-2xl font-heading font-bold text-primary">NEXUS.</div>
+
+    <nav class="p-5 md:px-20 flex justify-between items-center backdrop-blur-md sticky top-0 z-50">
+      <div class="text-2xl font-heading font-bold text-primary">NEXUS DIGITAL</div>
       <ul class="hidden md:flex gap-8 font-medium">
-        <li><a href="#" class="hover:text-primary">Home</a></li>
-        <li><a href="#" class="hover:text-primary">Services</a></li>
-        <li><a href="#" class="hover:text-primary">Portfolio</a></li>
+        <li><a href="#" class="hover:text-primary hover:text-[var(--color-colorhover)]">Home</a></li>
+        <li><a href="#" class="hover:text-primary hover:text-[var(--color-colorhover)]">Services</a></li>
+        <li><a href="#" class="hover:text-primary hover:text-[var(--color-colorhover)]">Portfolio</a></li>
       </ul>
-      <button id="theme-toggle" class="p-2 bg-slate-200 dark:bg-slate-700 rounded-full">
+      <div class="flex items-center gap-4">
+        <button class="rounded-2xl bg-[var(--color-btnSatu)] text-white px-6 py-2 font-medium hover:bg-[var(--color-colorhover)] hover:cursor-pointer transition-colors">Get Started</button>
+        <button id="theme-toggle" class="p-2 bg-btn-bg dark:bg-slate-700 rounded-full hover:cursor-pointer transition-colors">
         🌙 </button>
+      </div>
     </nav>
 
     <main>
