--- a/index.html
+++ b/index.html
@@ -23,16 +23,18 @@
     </nav>
 
     <main>
-      <section class="h-[80vh] flex flex-col justify-center items-center text-center px-4">
-        <h1 class="text-5xl md:text-7xl font-heading font-extrabold mb-4">
-          Build Your <span class="text-transparent bg-clip-text bg-gradient-to-r from-primary to-secondary">Digital Future</span>
-        </h1>
-        <p class="text-lg max-w-2xl text-slate-500 dark:text-slate-400">
-          Kami membantu bisnis bertransformasi melalui desain modern dan teknologi mutakhir.
-        </p>
-        <button class="mt-8 px-8 py-3 bg-primary text-white font-bold rounded-full hover:scale-105 transition-transform">
-          Start Project
-        </button>
+      <section id="hero" class="min-h-screen flex flex-col md:flex-row items-center justify-center px-5 md:px-20 gap-10">
+        <div class="basis-1/2 justify-between flex flex-col gap-8">
+          <h1 class="text-[var(--font-heading)] md:text-5xl text-3xl font-heading">Transforming Ideas into Digital Masterpieces</h1>
+          <h4 class="text-[var(--font-body)] md:text-xl text-sm font-normal ">Nexus Digital adalah mitra strategis untuk desain UI/UX, pengembangan web, dan solusi digital yang inovatif. Kami membangun masa depan melalui kode dan kreativitas</h4>
+          <div class="flex gap-6">
+            <button class="rounded-2xl bg-[var(--color-btnSatu)] text-white px-6 py-2 font-medium hover:bg-[var(--color-colorhover)] hover:cursor-pointer transition-colors">Start a Project</button>
+            <button class="rounded-2xl border border-[var(--color-btnSatu)] text-[var(--color-btnSatu)]  px-6 py-2 font-medium hover:bg-[var(--color-colorhover)] hover:cursor-pointer hover:text-white transition-colors">View Our Work</button>
+          </div>
+        </div>
+        <div class="md:basis-1/3 basis-1/2 flex justify-center items-center">
+          <img src="public/img/iy 1.jpg" alt="hero image" class="w-70 md:w-105 rounded-3xl shadow-lg hover:scale-105 transition-transform duration-300">
+        </div>
       </section>
     </main>
 
