--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     </nav>
 
     <main>
-      <section id="hero" class="min-h-screen flex flex-col md:flex-row items-center justify-center px-5 md:px-20 gap-10">
+      <section id="hero" class="min-h-screen flex flex-col md:flex-row items-center justify-between px-5 md:px-20 gap-10">
         <div class="basis-1/2 justify-between flex flex-col gap-8">
           <h1 class="text-[var(--font-heading)] md:text-5xl text-3xl font-heading">Transforming Ideas into Digital Masterpieces</h1>
-          <h4 class="text-[var(--font-body)] md:text-xl text-sm font-normal ">Nexus Digital adalah mitra strategis untuk desain UI/UX, pengembangan web, dan solusi digital yang inovatif. Kami membangun masa depan melalui kode dan kreativitas</h4>
+          <h4 class="text-[var(--font-body)] md:text-xl text-sm font-normal ">Nexus Digital is a strategic partner for UI/UX design, web development, and innovative digital solutions. We build the future through code and creativity.</h4>
           <div class="flex gap-6">
             <button class="rounded-2xl bg-[var(--color-btnSatu)] text-white px-6 py-2 font-medium hover:bg-[var(--color-colorhover)] hover:cursor-pointer transition-colors">Start a Project</button>
             <button class="rounded-2xl border border-[var(--color-btnSatu)] text-[var(--color-btnSatu)]  px-6 py-2 font-medium hover:bg-[var(--color-colorhover)] hover:cursor-pointer hover:text-white transition-colors">View Our Work</button>
@@ -34,6 +34,31 @@
         </div>
         <div class="md:basis-1/3 basis-1/2 flex justify-center items-center">
           <img src="public/img/iy 1.jpg" alt="hero image" class="w-70 md:w-105 rounded-3xl shadow-lg hover:scale-105 transition-transform duration-300">
+        </div>
+      </section>
+
+      <section id="services" class="py-20 px-5 md:px-20">
+        <div class="text-center mb-16">
+          <h2 class="text-3xl md:text-4xl font-heading font-bold mb-4">Our Services</h2>
+          <p class="text-[var(--font-body)] max-w-2xl mx-auto">We offer a comprehensive range of digital services designed to elevate your brand and drive growth in the digital landscape.</p>
+        </div>
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+          <div class="group rounded-2xl bg-gradient-to-br from-slate-900/60 via-indigo-900/40 to-slate-800/60 backdrop-blur-md border border-white/10 p-6 transition-all duration-300 ease-out hover:-translate-y-2 hover:border-cyan-400/70 hover:shadow-[0_0_30px_rgba(34,211,238,0.25)]">
+            <h3 class="text-xl font-bold mb-4">UI/UX Design</h3>
+            <p class="text-[var(--font-body)]">Creating intuitive and engaging user experiences that delight your customers and drive conversions.</p>
+          </div>
+          <div class="group rounded-2xl bg-gradient-to-br from-slate-900/60 via-indigo-900/40 to-slate-800/60 backdrop-blur-md border border-white/10 p-6 transition-all duration-300 ease-out hover:-translate-y-2 hover:border-cyan-400/70 hover:shadow-[0_0_30px_rgba(34,211,238,0.25)]">
+            <h3 class="text-xl font-bold mb-4">Web Development</h3>
+            <p class="text-[var(--font-body)]">Building responsive, high-performance websites and web applications tailored to your business needs.</p>
+          </div>
+          <div class="group rounded-2xl bg-gradient-to-br from-slate-900/60 via-indigo-900/40 to-slate-800/60 backdrop-blur-md border border-white/10 p-6 transition-all duration-300 ease-out hover:-translate-y-2 hover:border-cyan-400/70 hover:shadow-[0_0_30px_rgba(34,211,238,0.25)]">
+            <h3 class="text-xl font-bold mb-4">Mobile App Development</h3>
+            <p class="text-[var(--font-body)]">Developing cross-platform mobile applications that deliver seamless experiences across iOS and Android devices.</p>
+          </div>
+          <div class="group rounded-2xl bg-gradient-to-br from-slate-900/60 via-indigo-900/40 to-slate-800/60 backdrop-blur-md border border-white/10 p-6 transition-all duration-300 ease-out hover:-translate-y-2 hover:border-cyan-400/70 hover:shadow-[0_0_30px_rgba(34,211,238,0.25)]">
+            <h3 class="text-xl font-bold mb-4">Digital Marketing</h3>
+            <p class="text-[var(--font-body)]">Strategic marketing solutions to increase your online visibility, attract more customers, and boost revenue.</p>
+          </div>
         </div>
       </section>
     </main>
