--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
       </section>
 
-      <section id="services" class="py-20 px-5 md:px-20">
+      <section id="services" class="min-h-screen  py-20 px-5 md:px-20">
         <div class="text-center mb-16">
           <h2 class="text-3xl md:text-4xl font-heading font-bold mb-4">Our Services</h2>
           <p class="text-[var(--font-body)] max-w-2xl mx-auto">We offer a comprehensive range of digital services designed to elevate your brand and drive growth in the digital landscape.</p>
@@ -61,6 +61,34 @@
           </div>
         </div>
       </section>
+
+      <section id="portfolio" class="min-h-screen py-20 px-5 md:px-20">
+        <div class="text-center mb-16">
+          <h2 class="text-3xl md:text-4xl font-heading font-bold mb-4">Our Portfolio</h2>
+          <p class="text-[var(--font-body)] max-w-2xl mx-auto">A showcase of our recent projects that highlight our expertise in design and development across various industries.</p>
+        </div>
+        <div class="flex flex-col md:flex-row justify-between items-center gap-8">
+          <div class="basis-1/3 flex justify-center items-center">
+            <img class="w-full rounded-2xl hover:-translate-y-2 hover:border-cyan-400/70 hover:shadow-[0_0_30px_rgba(34,211,238,0.25)]"  src="public/img/cryptomobile.jpeg" alt="cryptomobile">
+          </div>
+          <div class="basis-2/3 grid grid-cols-1 gap-8 rounded-2xl">
+            <div class="rounded-2xl flex justify-center items-center">
+              <img class="w-full rounded-2xl hover:-translate-y-2 hover:border-cyan-400/70 hover:shadow-[0_0_30px_rgba(34,211,238,0.25)]"  src="public/img/zenith.png" alt="zenith">
+            </div>
+            <div class="grid grid-cols-2 gap-8">
+              <div class="rounded-2xl flex justify-center items-center">
+                <img class="w-full rounded-2xl hover:-translate-y-2 hover:border-cyan-400/70 hover:shadow-[0_0_30px_rgba(34,211,238,0.25)]"  src="public/img/skyline.png" alt="skyline">
+              </div>
+              <div class="rounded-2xl flex justify-center items-center">
+                <img class="w-full rounded-2xl hover:-translate-y-2 hover:border-cyan-400/70 hover:shadow-[0_0_30px_rgba(34,211,238,0.25)]"  src="public/img/dm.png" alt="digital marketing">
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    
+        
+        </div>
     </main>
 
     <script type="module" src="/src/main.js"></script>
