feat: add footer image and update navigation links to home, service, and porto

--- a/index.html
+++ b/index.html
@@ -86,9 +86,36 @@
           </div>
         </div>
       </section>
-    
-        
-        </div>
+      <section>
+        <footer class="bg-[var(-color-dark-bg)] text-white dark:bg-[var(--color-light-bg)] dark:text-black py-10 px-5 md:px-20 text-center gap-8">
+          <div class="grid grid-cols-1 md:grid-cols-3 gap-8 mb-8">
+            <div class="brand text-center md:text-left">
+              <h3 class="text-2xl font-heading font-bold mb-4">NEXUS DIGITAL</h3>
+              <div class="contact">
+                <p class="mb-2">Email: nexusdigital@example.com</p>
+                <p>Phone: +1 (123) 456-7890</p>
+                <div class="socialmedia mt-8 text-center md:text-left ">
+                  <a href="#" class="mx-2 hover:text-primary hover:text-[var(--color-colorhover)]">Facebook</a>
+                  <a href="#" class="mx-2 hover:text-primary hover:text-[var(--color-colorhover)]">Twitter</a>
+                  <a href="#" class="mx-2 hover:text-primary hover:text-[var(--color-colorhover)]">LinkedIn</a>
+                </div>
+              </div>
+            </div>
+            <div class="quicklinks text-center md:text-left">
+              <h4 class="text-xl font-heading font-bold mb-4">Quick Links</h4>
+              <a href="#" class="block mb-2 hover:text-primary hover:text-[var(--color-colorhover)]">Home</a>
+              <a href="#" class="block mb-2 hover:text-primary hover:text-[var(--color-colorhover)]">Services</a>
+              <a href="#" class="block mb-2 hover:text-primary hover:text-[var(--color-colorhover)]">Portfolio</a>
+            </div>
+            <div class="startpeoject bg-[var(--color-colorhover)] bg-opacity-20 p-6 rounded-2xl text-center md:text-left">
+              <h4 class="text-xl font-heading font-bold mb-4">Start a Project</h4>
+              <p class="mb-4">Ready to take your digital presence to the next level? Contact us today to discuss your project!</p>
+              <button class="rounded-2xl bg-[var(--color-btnSatu)] text-white px-6 py-2 font-medium hover:bg-[var(--color-light-bg)] hover:text-[var(--color-dark-bg)] hover:cursor-pointer transition-colors">Get in Touch</button>
+            </div>
+          </div>
+          <p>&copy; 2026 Nexus Digital. All rights reserved.</p>
+        </footer>
+      </section>
     </main>
 
     <script type="module" src="/src/main.js"></script>
