--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
               <a href="#" class="block mb-2 hover:text-primary hover:text-[var(--color-colorhover)]">Services</a>
               <a href="#" class="block mb-2 hover:text-primary hover:text-[var(--color-colorhover)]">Portfolio</a>
             </div>
-            <div class="startpeoject bg-[var(--color-colorhover)] bg-opacity-20 p-6 rounded-2xl text-center md:text-left">
+            <div class="startpeoject bg-[var(--color-dark-bg)] text-white bg-opacity-20 p-6 rounded-2xl text-center md:text-left">
               <h4 class="text-xl font-heading font-bold mb-4">Start a Project</h4>
               <p class="mb-4">Ready to take your digital presence to the next level? Contact us today to discuss your project!</p>
               <button class="rounded-2xl bg-[var(--color-btnSatu)] text-white px-6 py-2 font-medium hover:bg-[var(--color-light-bg)] hover:text-[var(--color-dark-bg)] hover:cursor-pointer transition-colors">Get in Touch</button>
